--- a/info.plist
+++ b/info.plist
@@ -19,6 +19,7 @@
 			<string>F0118E02-401A-406E-8D6D-5A0D85D26F2F</string>
 			<string>F671A52D-09DE-4728-9BD3-9261091BF70E</string>
 			<string>419523D0-5D90-44D3-A683-2F1E684DF13F</string>
+			<string>8D037759-4ECF-4109-9C41-DDA6BDA54DED</string>
 			<string>466F480E-1D16-402A-9289-91EC820519FB</string>
 			<string>7415BFEE-0EDA-4AF3-9C99-752A4F0E1856</string>
 		</array>
@@ -47,6 +48,15 @@
 				</array>
 				<key>name</key>
 				<string>Macros Example</string>
+			</dict>
+			<key>8D037759-4ECF-4109-9C41-DDA6BDA54DED</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>1342CAC8-1A32-497C-BF33-2EF852C9C0DB</string>
+				</array>
+				<key>name</key>
+				<string>Static Segments</string>
 			</dict>
 			<key>CA0CA4B6-5673-4837-B432-395F48B9516D</key>
 			<dict>
@@ -120,6 +130,7 @@
 		<string>71FE5E76-62E8-4905-8A11-BDA3400A88AE</string>
 		<string>096C895E-5610-4391-8A61-6F3B906959C8</string>
 		<string>51515F73-E28F-460C-8B0D-F55B90C1664D</string>
+		<string>1342CAC8-1A32-497C-BF33-2EF852C9C0DB</string>
 		<string>42E62F90-E4BE-4C13-83F1-906791252870</string>
 		<string>1B478D52-F06D-4B91-8982-932E6421FAA9</string>
 		<string>6D22F9B6-32D6-409F-B80C-6958C0AE1079</string>
