Add delete segment functionality

--- a/info.plist
+++ b/info.plist
@@ -54,6 +54,7 @@
 				<key>items</key>
 				<array>
 					<string>1342CAC8-1A32-497C-BF33-2EF852C9C0DB</string>
+					<string>DCBC10BD-3F07-4808-A7E2-765BC27DF608</string>
 				</array>
 				<key>name</key>
 				<string>Static Segments</string>
@@ -131,6 +132,7 @@
 		<string>096C895E-5610-4391-8A61-6F3B906959C8</string>
 		<string>51515F73-E28F-460C-8B0D-F55B90C1664D</string>
 		<string>1342CAC8-1A32-497C-BF33-2EF852C9C0DB</string>
+		<string>DCBC10BD-3F07-4808-A7E2-765BC27DF608</string>
 		<string>42E62F90-E4BE-4C13-83F1-906791252870</string>
 		<string>1B478D52-F06D-4B91-8982-932E6421FAA9</string>
 		<string>6D22F9B6-32D6-409F-B80C-6958C0AE1079</string>
