Add ability to add members

--- a/info.plist
+++ b/info.plist
@@ -56,6 +56,8 @@
 					<string>1342CAC8-1A32-497C-BF33-2EF852C9C0DB</string>
 					<string>DCBC10BD-3F07-4808-A7E2-765BC27DF608</string>
 					<string>7727C32D-7C7E-4D3A-983C-44B1DA63A1E8</string>
+					<string>------------------------------------</string>
+					<string>72D4C8F3-BBFB-4DF3-903F-E88A2C034004</string>
 				</array>
 				<key>name</key>
 				<string>Static Segments</string>
@@ -135,6 +137,7 @@
 		<string>1342CAC8-1A32-497C-BF33-2EF852C9C0DB</string>
 		<string>DCBC10BD-3F07-4808-A7E2-765BC27DF608</string>
 		<string>7727C32D-7C7E-4D3A-983C-44B1DA63A1E8</string>
+		<string>72D4C8F3-BBFB-4DF3-903F-E88A2C034004</string>
 		<string>42E62F90-E4BE-4C13-83F1-906791252870</string>
 		<string>1B478D52-F06D-4B91-8982-932E6421FAA9</string>
 		<string>6D22F9B6-32D6-409F-B80C-6958C0AE1079</string>
